kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artgallery
  namespace: artgallery-cicd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: artgallery
  template:
    metadata:
      labels:
        app: artgallery
    spec:
      containers:
        - name: artgallery
          image: krrsteva/artgallery-cicd:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
