kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: artgallery-cicd
spec:
  ports:
    - port: 5432
      name: postgres
      protocol: TCP
  selector:
    app: postgres
