kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artgallery-service
  namespace: artgallery-cicd
spec:
  selector:
    app: artgallery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
