kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artgallery-ingress
  namespace: artgallery-cicd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: artgallery.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artgallery-service
                port:
                  number: 80
